--- a/WebApplication1/WebApplication1/Views/Students/Index.cshtml
+++ b/WebApplication1/WebApplication1/Views/Students/Index.cshtml
@@ -6,7 +6,7 @@
 
 <h2>@ViewData["Title"]</h2>
 
-<table class="table">
+<table class="table table-bordered table-striped">
     <thead>
     <tr>
         <th>Student Id</th>
