--- a/WebApplication1/WebApplication1/Views/Students/Index.cshtml
+++ b/WebApplication1/WebApplication1/Views/Students/Index.cshtml
@@ -27,6 +27,7 @@
             <td>
                 <a asp-action="Edit" asp-route-id="@item.StudentId">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.StudentId">Details</a>
+                <a asp-action="Delete" asp-route-id="@item.StudentId">Delete</a>
             </td>
         </tr>
     }
