--- a/WebApplication1/WebApplication1/Views/Students/Index.cshtml
+++ b/WebApplication1/WebApplication1/Views/Students/Index.cshtml
@@ -5,6 +5,7 @@
 }
 
 <h2>@ViewData["Title"]</h2>
+<a asp-action="Create" class="btn btn-success mb-2">Add Student</a>
 
 <table class="table table-bordered table-striped">
     <thead>
@@ -25,7 +26,7 @@
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.StudentId">Edit</a> |
+                <a asp-action="Edit" asp-route-id="@item.StudentId">Edit</a>
                 <a asp-action="Details" asp-route-id="@item.StudentId">Details</a>
                 <a asp-action="Delete" asp-route-id="@item.StudentId">Delete</a>
             </td>
