Some Styles refined

--- a/WebApplication1/WebApplication1/Views/Department/Edit.cshtml
+++ b/WebApplication1/WebApplication1/Views/Department/Edit.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = $"Edit Department: {Model.Name}";
 }
 
-<div class="p-4 bg-white rounded-lg shadow">
+<div class="p-4 bg-white rounded-lg">
     <h2 class="card-header text-black text-center text-primary fw-bold">@ViewData["Title"]</h2>
     <div class="card-body">
 
