--- a/WebApplication1/WebApplication1/Views/Instructor/Edit.cshtml
+++ b/WebApplication1/WebApplication1/Views/Instructor/Edit.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="p-4 bg-white rounded-lg">
-    <h2 class="card-header text-black text-center text-primary fw-bold">@ViewData["Title"]</h2>
+    <h2 class="text-black text-center text-primary fw-bold">@ViewData["Title"]</h2>
     <div class="card-body">
 
         <form asp-action="Edit" method="post">
