--- a/WebApplication1/WebApplication1/Views/Instructor/Delete.cshtml
+++ b/WebApplication1/WebApplication1/Views/Instructor/Delete.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Delete Instructor";
 }
 
-<div class="p-4 bg-white rounded-lg shadow-sm">
+<div class="p-4 bg-white rounded-lg">
     <h1 class="text-danger">Delete Instructor</h1>
     
     <h4 class="mt-4">Are you absolutely sure you want to delete this instructor?</h4>
