--- a/WebApplication1/WebApplication1/Views/Students/Create.cshtml
+++ b/WebApplication1/WebApplication1/Views/Students/Create.cshtml
@@ -1,7 +1,9 @@
 ﻿@model WebApplication1.Models.Student 
+@using Microsoft.AspNetCore.Mvc.Rendering
 
 @{
     ViewData["Title"] = "Create New Student";
+    SelectList departmentList = (SelectList)ViewData["Departments"];
 }
 
 <div class="p-4 bg-white rounded-lg">
@@ -30,8 +32,10 @@
             </div>
 
             <div class="mb-2">
-                <label asp-for="DeptId" class="form-label fw-bold">Department ID</label>
-                <input asp-for="DeptId" class="form-control" /> 
+                <label asp-for="DeptId" class="form-label fw-bold">Department Name</label>
+                <select asp-for="DeptId" class="form-control" asp-items="departmentList"> 
+                    <option value="">-- Select Department --</option>
+                </select>
                 <span asp-validation-for="DeptId" class="text-danger small"></span>
             </div>
 
