--- a/WebApplication1/WebApplication1/Views/CourseStudents/Index.cshtml
+++ b/WebApplication1/WebApplication1/Views/CourseStudents/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Course List";
 }
 
-<h2>@ViewData["Title"]</h2>
+<h2 class="mb-4">@ViewData["Title"]</h2>
 
 <ul>
     @foreach(Course course in Model)
