before working on auth

--- a/WebApplication1/WebApplication1/Views/Shared/_Layout.cshtml
+++ b/WebApplication1/WebApplication1/Views/Shared/_Layout.cshtml
@@ -19,6 +19,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
+                    
                     <ul class="navbar-nav flex-grow-1">
                         @{
                             // Retrieve and normalize the current controller and action names for reliable comparison
@@ -59,6 +60,16 @@
                             <a class="nav-link" 
                                style="@(currentController == "coursestudents" ? activeStyle : defaultStyle)" 
                                asp-area="" asp-controller="CourseStudents" asp-action="Index">Course Students</a>
+                        </li>
+                    </ul>
+                    
+                    <ul class="navbar-nav **ms-auto**">
+                        
+                        <li class="nav-item **me-2**">
+                            <a class="btn **btn-outline-primary**" style="background-color: #0a53be; color: white;" asp-area="" asp-controller="Account" asp-action="Register">Signup</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="btn **btn-primary**" asp-area="" asp-controller="Account" asp-action="Logout">Logout</a>
                         </li>
                     </ul>
                 </div>
